force-app/main/default/objects/Travel_Period__c/Travel_Period__c.object-meta.xml
<CustomObject>
    <description>Consumption of days in Business Travel insurance</description>
    <label>Travel Period</label>
    <nameField>
        <label>Travel Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>