force-app/main/default/objects/Travel_Period__c/fields/Consumption_days__c.field-meta.xml
<CustomField>
    <fullName>Consumption_days__c</fullName>
    <label>Consumption days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>