force-app/main/default/objects/Travel_Period__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipLabel>Travel Periods</relationshipLabel>
    <relationshipName>Travel_Periods_To_Policy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>