force-app/main/default/objects/Travel_Period__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <inlineHelpText>תעריף ליום</inlineHelpText>
    <label>Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>