force-app/main/default/objects/Travel_Period__c/fields/report_date__c.field-meta.xml
<CustomField>
    <fullName>report_date__c</fullName>
    <label>תאריך דיווח</label>
    <type>Date</type>
</CustomField>