force-app/main/default/objects/Travel_Period__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>